--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,21 +8,25 @@
 .left_img_cont{
     position: relative;
     width: 80%;
+    background-color: rgb(43, 43, 43);
 }
 .right_img_cont{
     position: relative;
     width: 20%;
-    /* z-index: 1; */
+    background-color: rgb(43, 43, 43);
 }
 .right_img_cont div img{
     width: 100%;
 
 }
 .img_style{
-    height:100%;
+    height: 100%;
     width: 100%;
     object-fit: cover;
     
+}
+.thumbnail{
+    filter: grayscale(70%);
 }
 
 .img_text{
@@ -30,10 +34,8 @@
     bottom: 30px;
     right: 40px;
     color: white;
+    text-shadow: 0px 4px 4px #000000;
 }
-
-
-
 
 .img_under_img{
     position: absolute;
@@ -42,6 +44,9 @@
     right: 0;
     bottom: 0;
     opacity: 0;
+}
+.thumbnail_opacity{
+    opacity: .5;
 }
 
 /********** arrow ************/
@@ -57,20 +62,24 @@
     top: 10px;
     left: 50%;
     transform: translateX(-50%);
-    width: 30px;
-    height: 30px;
-    
-    
+    width: 40px;
+}
+.my_rounded_border{
+    border-radius: 20px;
 }
 .arrow_down{    
     position: absolute;
     bottom: 10px;
     left: 50%;
     transform: translateX(-50%);
-    height: 30px;
-    width: 30px;
+    width: 40px
 
     
+}
+.arrow_centered{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .myIconSize{
     font-size: 23px;
@@ -81,9 +90,14 @@
 
 /********* active class **********/
 .left_img_cont div.active{
-    opacity: 1;
+    opacity: .8;
+    transition: all .7s ease-in-out;
 }
 .thumb_active{
-    border: 4px solid rgb(202, 202, 202);
+    border: 3px solid rgb(226, 226, 226);
+    opacity: 1;
+    transition: all .4s ease-in-out;
+
 }
+
 /* ***************************** */
